parser/tests/bad/type02-1.st
% type of the expression cannot be assigned as the declared type
%   variable identifier

var i: real := true
